--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 	</properties>
 
 	<dependencies>
-	<!-- https://mvnrepository.com/artifact/com.google.firebase/firebase-admin -->
+
 	<dependency>
     	<groupId>com.google.firebase</groupId>
     	<artifactId>firebase-admin</artifactId>
@@ -36,10 +36,18 @@
     <artifactId>scribejava-apis</artifactId>
     <version>5.0.0</version>
 </dependency>
+
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+		<dependency>
+    <groupId>com.textmagic.sdk</groupId>
+    <artifactId>textmagic-java-sdk</artifactId>
+    <version>1.2.0</version>
+</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
@@ -55,7 +63,26 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+			<exclusions>
+        <exclusion>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-tomcat</artifactId>
+        </exclusion>
+      </exclusions>
+			
 		</dependency>
+		<dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.1.0</version>
+      <scope>provided</scope>
+    </dependency>
+		 <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>jul-to-slf4j</artifactId>
+      <scope>provided</scope>
+    </dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web-services</artifactId>
@@ -70,26 +97,20 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<scope>provided</scope>
-		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 		
-		  
-  <!-- Apache Commons Upload -->  
+ 
   <dependency>  
    <groupId>commons-fileupload</groupId>  
    <artifactId>commons-fileupload</artifactId>  
    <version>1.2.2</version>  
   </dependency>  
   
-  <!-- Apache Commons Upload -->  
   <dependency>  
    <groupId>commons-io</groupId>  
    <artifactId>commons-io</artifactId>  
@@ -108,6 +129,12 @@
             <artifactId>appengine-maven-plugin</artifactId>
             <version>1.9.9</version>
         </plugin>
+        <plugin>
+        <groupId>com.google.cloud.tools</groupId>
+        <artifactId>appengine-maven-plugin</artifactId>
+        <version>1.3.1</version>
+      </plugin>
+        
 		</plugins>		
 	</build>
 
